# avr_yaml

./: Makefile  README.md  avr.yml  build.py  process.py  pyproject.toml
aux/: avr.csv
data/: avr.csv
extras/: extract_ops.sh  pdf_to_text.py
work/: avr.numbers
